--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -7,7 +7,7 @@ Nach der Adaptierung von Kupfer-Prozess-Parametern auf das Kupfer-Nickel-Multila
 
 Typischerweise deuten Wachstumsdefekte auf geringe Relaxationszeiten, geringe Sputterenergien oder geringe Temperaturen hin.
 Das folgende System wurde bei \SI{500}{\kelvin} mit \SI{5.4}{\electronvolt} Auftreffenergie pro Teilchen für \SI{1.2}{\nano\second} relaxiert.
-Die Auftreffenergie wird jedoch hauptsächlich Teil vom Thermostat abgefangen, so dass sie mit \SI{5.4}{\electronvolt} eigentlich zu niedrig liegt.
+Die Auftreffenergie wird jedoch vom Thermostat vor dem eigentlichen Auftreffen reduziert, so dass sie mit \SI{5.4}{\electronvolt} nach Untersuchungen der Schichtqualität eigentlich zu niedrig liegt.
 
 Als Resultat bilden sich Poren (Abbildung~\ref{fig:multilayer_surfacefail}), die sich vergleichbar zu den Kupferkratern in Abbildung~\ref{fig:coppercrater} entwickeln, sich aber erst spät wieder schließen.
 
