--- a/contents.tex
+++ b/contents.tex
@@ -15,7 +15,6 @@
 %\cleardoublepage
 \markboth{Abbildungsverzeichnis}{Abbildungsverzeichnis}
 \listoffigures
-\todo[inline]{Beschreibungen der Abbildungen überarbeiten}
 
 %%======================================================================
 %%      Tabellenverzeichnis
@@ -23,7 +22,6 @@
 %\cleardoublepage
 \markboth{Tabellenverzeichnis}{Tabellenverzeichnis}
 \listoftables
-\todo[inline]{Beschreibungen der Tabellen überarbeiten}
 
 %======================================================================
 %  Literaturverzeichnis
@@ -65,11 +63,11 @@ AFM       & Atomic Force Microscopy             & Rasterkraftmikroskopie        
 ALD       & Atomic Layer Deposition             & Atomlagenabscheidung                                        \\
 CG        & Conjugated Gradients                & Konjugierte Gradienten                                      \\
 CLI       & Command Line Interface              & Kommandozeile                                               \\
+CFD       & Computational Fluid Dynamics        & Eine Methode zur Gasfluss/Simulation                        \\
 CVD       & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung                              \\
 DFT       & Density Functional Theory           & Dichtefunktionaltheorie                                     \\
 EAM       & Embedded Atom Method                & Eingebettete-Atom-Methode                                   \\
 FEM       & Finite Element Method               & Finite-Elemente-Methoden                                    \\
-GMR       & Giant Magnetoresistance             & Riesenmagnetowiderstand                                     \\
 GPC       & Growth per Cycle                    & Schichtwachstum pro ALD-Zyklus                              \\
 KMC       & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden                             \\
 MMC       & Metropolis Monte Carlo              & Metropolis Monte Carlo-Methoden                             \\
@@ -97,7 +95,16 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
 
   ENAS      & \multicolumn{2}{l}{Fraunhofer-Institut für Elektronische Nano-Systeme}                            \\
   LAMMPS    & \multicolumn{2}{l}{Large-scale Atomic/Molecular Massively Parallel Simulator (MD-Bibliothek)}     \\
+  LMP
+  GMR       & Giant Magnetoresistance             & Riesenmagnetowiderstand                                     \\
+  TMR
   AMBER
+  CHARMM
+  EON
+  LJ
+  NIST
+  NO
+  OH
   GROMACS
   BIOVIA
   TU
@@ -123,8 +130,6 @@ $\sigma_z$         & RMS-Rauheit einer Oberfläche   \\
 $\tau$             & Dämpfungszeit von Thermostaten \\
 \end{tabularx}
 \todo[inline]{die wichtigsten Symbole automatisch aus allen Formeln exportieren}
-\todo[inline]{Verweise von Gleichungen durch Lokalität ersetzen}
-\todo[inline]{Kein neuer Absatz nach Gleichungen}
 
 %\printglosstex(acr)
 
