--- a/mdmethods.tex
+++ b/mdmethods.tex
@@ -48,7 +48,7 @@ Beispiele radialer Verteilungsfunktionen finden sich in Abbildungen~\ref{fig:sil
 Zur Bestimmung der Schichtdicke, Oberflächenrauheit oder Porösität muss zuerst die Oberfläche einer Schicht aus der Alpha-Form mittels Delaunay-Triangulation in Form einer Punktwolke bestimmt werden (Abschnitt~\ref{datadelaunay}).
 Im Anschluss lässt sich aus der entstandenen Punktwolke der tiefste und höchste Punkt der Oberfläche sowie die Spannweite bestimmen und durch Bildung des Mittelwertes die mittlere Schichtdicke ermitteln.
 Durch Zählung der Elemente in der Punktwolke lässt sich zudem die Bedeckung der Oberfläche mit chemischen Gruppen bestimmen.
-Durch Begutachtung der Oberflächen-Punktwolke kann man außerdem Rückschlüsse auf die Porösität führen, indem man neben der eigentlichen Oberfläche auch sämtliche Poren und Hohlräume innerhalb der Struktur aus der Alpha-Form extrahiert.
+Durch Begutachtung der Oberflächen-Punktwolke können außerdem Rückschlüsse auf die Porösität gezogen werden, indem neben der eigentlichen Oberfläche auch sämtliche Poren und Hohlräume innerhalb der Struktur aus der Alpha-Form gelesen werden.
 
 \subsection{Reaktionen und Stabilität von Molekülen}
 
