--- a/metadaten.tex
+++ b/metadaten.tex
@@ -38,7 +38,7 @@
 \newcommand{\dcdepartadvisor}{\dcdepartext}
 \newcommand{\dcgroupadvisor}{Simulationsgruppe}
 
-\newcommand{\dckeywords}{Enter Keywords Here}
+\newcommand{\dckeywords}{Dünnschichten, Gasphasenabscheidung (PVD, CVD), Atomlagenabscheidung (ALD), Multiskalenmodellierung, Kinetic Monte Carlo (KMC), Molekulardynamik (MD)}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
