--- a/models.tex
+++ b/models.tex
@@ -4,9 +4,9 @@
 
 \todo[inline]{Kurze Einleitung}
 
-%% \input{present}
-%% \clearpage
+\input{present}
+\clearpage
 \input{parsivald}
-%% \clearpage
-%% \input{mdmethods}
+\clearpage
+\input{mdmethods}
 
