--- a/present.tex
+++ b/present.tex
@@ -1,6 +1,6 @@
 \section{Stand der Forschung}
 \label{present}
-\todo{``Stand der Forschung'' könnte man noch durch eien besseren Titel ausdrücken}
+\todo{``Stand der Forschung'' könnte durch einen besseren Titel ausgedrückt werden}
 
 Molekulardynamische und kinetische Monte Carlo-Methoden wurden wiederholt zur Simulation von verschiedenen Aspekten von Gasphasenabscheidungen zu Rate gezogen.
 Im Folgenden soll ein Überblick über die bisherigen Untersuchungen gegeben werden.
@@ -62,7 +62,7 @@ KMC-Simulationen werden zur atomistischen Simulation von Gasphasenabscheidungen 
 Damit können zwar große Simulationsräume effektiv betrachtet werden, allerdings werden realistische Beschreibungen der oftmals amorphen Struktur von Materialien verhindert.
 
 Vereinzelt existieren auch Off-Lattice-Ansätze für KMC-Simulationen, die für die Durchführung von Ereignissen häufig auf molekulardynamische Simulationen zurück greifen.
-Die untersuchten Systeme setzen allerdings auf schnelle Vielteilchenpotentiale, die sich vermutlich aus der seriellen Arbeitsweise der Modelle und der damit verbundenen Forderung nach schnellen Ereignissen ergibt.
+Die untersuchten Systeme setzen allerdings auf schnelle N-Teilchen-Potentiale, die sich aus der seriellen Arbeitsweise der Modelle und der damit verbundenen Forderung nach schnellen Ereignissen ergibt.
 Es wurden jedoch keine Off-Lattice-Simulationen amorpher Strukturen gefunden, wie sie häufig durch Gasphasenabscheidungen erzeugt werden.
 
 \subsection{Anwendung von MD-Simulationen für die Gasphasenabscheidung}
