--- a/kmc.tex
+++ b/kmc.tex
@@ -1,11 +1,13 @@
 \section{Kinetic Monte Carlo-Methoden}
 \label{kmc}
 
-\todo[inline]{Mastergleichung (siehe clark\_hybrid\_1996}
-
 Kinetische Monte Carlo-Methoden (KMC) wurden ursprünglich zur Simulation von Diffusionsprozessen entwickelt, finden aber inzwischen in vielen Gebieten der Natur- und Ingenieurswissenschaften Anwendung.
-Sie beschreiben den Zeitverlauf eines Systemes als eine Abfolge von diskreten Übergängen (Ereignissen) zwischen Systemzuständen, die mit ihrer charakteristischen Rate gewichtet werden.
-Damit bieten sie sich hauptsächlich zur Simulation stochastischer Prozesse an, wobei sie auch Nichtgleichgewichtssysteme beschreiben können und somit unter anderem zur Simulation von Oberflächenreaktionen und Schichtabscheidung geeignet sind.
+Sie beschreiben den Zeitverlauf eines Systemes als eine Abfolge von diskreten Übergängen (Ereignissen) zwischen Systemzuständen $X_n$ und $X_m$, die mit ihrer charakteristischen Rate $r_{n m}$ gewichtet werden.
+Damit stellen sie eine numerische Lösung der Mastergleichung für Markov-Prozesse dar.
+\todo{Jörg}\begin{equation}
+  \frac{d \rho(X_m,t)}{d t} = \sum_n{r_{n m}\rho(X_n,t) - \sum_n{r_{m n}\rho(X_m,t)}}
+\end{equation}
+KMC-Methoden bieten sie somit hauptsächlich zur Simulation stochastischer Prozesse an, wobei sie auch Nichtgleichgewichtssysteme beschreiben können und somit unter anderem zur Simulation von Oberflächenreaktionen und Schichtabscheidung geeignet sind.
 
 Ausgehend von einem Startzustand $X_0$ aus dem Zustandsraum $\mathbb{X}$ zum Zeitpunkt $t_0 = 0$ wird eine zeitliche Abfolge von Zuständen $X_n \in \mathbb{X}$ nach dem folgenden Algorithmus erzeugt:\\
 Zuerst werden alle Ereignisse $E_i$, die einen Übergang vom vorherigen Zustand $X_{n-1}$ zu einem beliebigen anderen Zustand $X_n^i$ ermöglichen, ermittelt und gesammelt:
@@ -18,11 +20,11 @@ Die Summe aller Raten ist somit $R_N$.
 \begin{equation}
   R_i = \sum_{j \le i}{r_j}
 \end{equation}
-Anschließend wählt man anhand einer gleichverteilten Zufallszahl $u$ ein Ereignis und wendet es an, indem man seinen Zielzustand $X_n^i$ als neuen Zustand $X_n$ akzeptiert.
+Anschließend wählt die Simulation anhand einer gleichverteilten Zufallszahl $u$ ein Ereignis und wendet es an, indem der Zielzustand $X_n^i$ als neuen Zustand $X_n$ akzeptiert wird.
 \begin{equation}
   X_n = X_n^i : R_{i-1} \le u R_N < R_i ~~,\quad u \in [0,1)~\text{gleichverteilt}
 \end{equation}
-Zum Abschluss des KMC-Schrittes erhöht man die Simulationszeit gemäß einer Poisson-Verteilung in Abhängigkeit der akkumulierten Rate $R_N$ \textit{aller} Ereignisse, wodurch die Zeitskala unabhängig von der Systemgröße wird:
+Zum Abschluss des KMC-Schrittes wird die Simulationszeit gemäß einer Poisson-Verteilung in Abhängigkeit der akkumulierten Rate $R_N$ \textit{aller} Ereignisse erhöht, wodurch die Zeitskala unabhängig von der Systemgröße ist:
 \begin{equation}
   t_n = t_{n-1} + \frac{-\ln(u')}{R_N} ~~,\quad u' \in [0,1)~\text{gleichverteilt}
 \end{equation}
