--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -24,24 +24,27 @@
 
 \begin{document}
 
-\include{titel}
-\include{abstract}
+%% \include{titel}
+
+\pagenumbering{roman}
+
+%% \include{abstract}
 \include{contents}
 
-\cleardoublepage
+%% \cleardoublepage
 \include{intro}
-\cleardoublepage
-\include{theory}
-\cleardoublepage
-\include{models}
-\cleardoublepage
-\include{results}
-\cleardoublepage
+%% \cleardoublepage
+%% \include{theory}
+%% \cleardoublepage
+%% \include{models}
+%% \cleardoublepage
+%% \include{results}
+%% \cleardoublepage
 \include{summary}
-\cleardoublepage
-\include{appendix}
+%% \cleardoublepage
+%% \include{appendix}
 
 \include{bibliography}
-\include{unischeiss}
+%% \include{unischeiss}
 
 \end{document}
